--- a/skillDialog/dialogRootBot/.env
+++ b/skillDialog/dialogRootBot/.env
@@ -7,3 +7,7 @@ SkillHostEndpoint=http://localhost:3981/api/skills/
 SkillId=DialogSkillBot
 SkillAppId=
 SkillEndpoint=http://localhost:3982/api/messages
+
+SkillOpenAiId=DialogSkillBotOpenAi
+SkillOpenAiAppId=
+SkillOpenAiEndpoint=http://localhost:3983/api/messages
